Add questionDAO in Servlet context and fix cast error